--- a/templates/ukora.html
+++ b/templates/ukora.html
@@ -46,7 +46,7 @@
       </div>
 
       <h2 class="text-center mb-3" style="font-size: larger; font-weight: 500;">Pay with PayPal</h2>
-      <p class="text-center mb-3" style="font-size: large; font-weight: 400;">With a PayPal account, you are eligible
+      <p class="text-center mb-3" style=" font-weight: 400;">With a PayPal account, you are eligible
         for PayPal Buyer Protection and Rewards.</p>
 
       <form action="{{ url_for('paypal_login') }}" method="POST">
@@ -94,7 +94,7 @@
 
         <!-- Dropdown Menu -->
         <div id="dropdownMenu"
-          class="absolute bg-white border border-gray-300 rounded-lg shadow hidden w-1/3 z-10">
+          class="absolute bg-white border border-gray-300 rounded-lg shadow hidden w-2/3 z-10">
           <ul>
             <li onclick="selectCountry('us')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
               <img src="https://flagcdn.com/w40/us.png" class="w-6 h-4 mr-2"> United States
@@ -117,15 +117,15 @@
           </ul>
         </div>
         <div style="font-weight: 500;">
-          <span class="font-bold">English</span> | Français | Español | 中文
+          <span class="">English</span> | Français | Español | 中文
         </div>
       </div>
 
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-100 text-center text-gray-600 text-sm p-2 w-full font-bold">
-      <p class="m-1 flex justify-center gap-2.5 flex-wrap text-gray-500"><span>Contact Us</span> <span>Privacy</span>
+    <footer class="bg-gray-100 text-center p-2 w-full">
+      <p class="m-1 flex justify-center gap-2.5 flex-wrap text-gray-500" style="font-size: xx-small;"><span>Contact Us</span> <span>Privacy</span>
         <span>Legal</span> <span>Policy Updates</span> <span>Worldwide</span>
       </p>
     </footer>
