--- a/templates/ukora.html
+++ b/templates/ukora.html
@@ -82,11 +82,11 @@
 
       <div class="flex items-center justify-center mt-4 relative" style="bottom: 0;">
         <!-- Trigger Button -->
-        <button id="dropdownButton" class="
-         bg-transparent flex justify-between items-center"
+        <button id="dropdownButton" style="font-size: 10px;" class="
+         bg-transparent flex justify-between items-center " 
           onclick="toggleDropdown()">
-          <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" alt="Flag" class="w-8 h-6 object-cover">
-          <svg class="w-5 h-4 m-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" alt="Flag" class="w-6 h-5 m-1 object-cover">
+          <svg class="w-5 h-4 m-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
           </svg>
         </button>
@@ -96,26 +96,26 @@
           class="absolute bg-white border border-gray-300 rounded-lg shadow hidden w-2/3 z-10">
           <ul>
             <li onclick="selectCountry('us')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/us.png" class="w-6 h-4 mr-2"> United States
+              <img src="https://flagcdn.com/w40/us.png" class="w-4 h-4 mr-2"> United States
             </li>
             <li onclick="selectCountry('gb')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/gb.png" class="w-6 h-4 mr-2"> United Kingdom
+              <img src="https://flagcdn.com/w40/gb.png" class="w-4 h-4 mr-2"> United Kingdom
             </li>
             <li onclick="selectCountry('ke')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/ke.png" class="w-6 h-4 mr-2"> Kenya
+              <img src="https://flagcdn.com/w40/ke.png" class="w-4 h-4 mr-2"> Kenya
             </li>
             <li onclick="selectCountry('in')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/in.png" class="w-6 h-4 mr-2"> India
+              <img src="https://flagcdn.com/w40/in.png" class="w-4 h-4 mr-2"> India
             </li>
             <li onclick="selectCountry('jp')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/jp.png" class="w-6 h-4 mr-2"> Japan
+              <img src="https://flagcdn.com/w40/jp.png" class="w-4 h-4 mr-2"> Japan
             </li>
             <li onclick="selectCountry('br')" class="flex items-center px-4 py-2 hover:bg-gray-100 cursor-pointer">
-              <img src="https://flagcdn.com/w40/br.png" class="w-6 h-4 mr-2"> Brazil
+              <img src="https://flagcdn.com/w40/br.png" class="w-4 h-4 mr-2"> Brazil
             </li>
           </ul>
         </div>
-        <p style="" style="">
+        <p>
           <span class="font-semibold">English</span> | Français | Español | 中文
         </p>
       </div>
