--- a/templates/tat-prices.html
+++ b/templates/tat-prices.html
@@ -8,119 +8,138 @@
             <h6>Full Chest</h6>
             <p>4hrs @ $450.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div>
             <h6>Spine Tattoo</h6>
             <p>2 hrs @ $250.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Foot Tattoo</h6>
             <p>1-2 hrs @ $250.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Tapout Session</h6>
             <p>6hrs  @ $600.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Name Tattoo</h6>
             <p>45 mins @ $80.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Leg Sleeve</h6>
             <p>6hrs @ $800.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Small Tattoo</h6>
             <p>1hr @ $125.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Palm Size</h6>
             <p>2hr @ $200.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Hand Tattoo</h6>
             <p>1-2 hrs @ $300.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Portraits</h6>
             <p>2-3 hrs @ $450.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Quarter Sleeve</h6>
             <p>2-3 hrs @ $350.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Half Sleeve</h6>
             <p>4hrs @ $400.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Large Thigh Tattoo</h6>
             <p>4-5 hrs @ $600.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Full Sleeve</h6>
             <p>5hrs @ $700.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Back Piece</h6>
             <p>3hrs @ $400.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Neck Piece</h6>
             <p>2hrs @ $250.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
             <h6>Aftercare</h6>
             <p>30mins @ $30.00</p>
         </div>
-        <a href="{{ booking_link }}"><button class="btn btn-primary">Book</button></a>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Payment Option</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="font-semibold">Select how you'll like to pay for your tattoo appointment. You can either pay with PayPal or Debit/Credit Card.</p>
+      </div>
+      <div class="modal-footer">
+        <a href="{{ paypal_booking_link }}"><button type="button" class="btn btn-primary">Pay with PayPal</button></a>
+        <a href="{{ card_booking_link}}"><button type="button" class="btn btn-primary">Pay with Debit or Credit Card</button></a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
