--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -19,6 +19,12 @@
         input[type='number'] {
             -moz-appearance: textfield;
         }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
     </style>
 
 </head>
