--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -10,6 +10,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
+        html,
+        body {
+            overflow-x: hidden;
+        }
+
         input[type='number']::-webkit-outer-spin-button,
         input[type='number']::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -29,10 +34,10 @@
 
 </head>
 
-<body class="bg-white flex items-center justify-center min-h-screen px-4">
-    <div class="w-full max-w-md space-y-6">
+<body class="bg-white px-2">
+    <div class="w-full space-y-6">
         <h2 class="text-center text-gray-700 font-medium mt-5">Pay with Card</h2>
-        
+
         <!-- Debit or Credit Card Button -->
         <button
             class="w-full flex items-center justify-center bg-gray-900 text-white font-semibold py-4 rounded hover:bg-gray-800 transition space-x-2">
@@ -72,7 +77,7 @@
                 </div>
                 <div class="flex space-x-4 items-center">
                     <p class="font-semibold mb-3">Billing address</p>
-                    <div class="items-center ml-auto relative w-64 left-1/2">
+                    <div class="items-center ml-auto relative w-64 left-1/2 -translate-x-1/2">
                         <!-- Trigger Button -->
                         <button id="dropdownButton" class="w-1/3 bg-transparent p-3 flex justify-between items-center"
                             onclick="toggleDropdown()">
