--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkout</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <style>
@@ -39,18 +41,6 @@
     <div class="container my-5">
         <h2 class="text-center text-secondary mb-4">Pay with Card</h2>
 
-        <!-- Card Payment Button -->
-        <div class="d-grid mb-4">
-            <button class="btn btn-dark d-flex justify-content-center align-items-center gap-2 py-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                    class="bi bi-credit-card" viewBox="0 0 16 16">
-                    <path
-                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v1H0V4zm0 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6H0zm2 3h3v1H2v-1z" />
-                </svg>
-                Debit or Credit Card
-            </button>
-        </div>
-
         <!-- Card Form -->
         <div class="card card-form">
             <div class="card-body position-relative">
@@ -66,35 +56,42 @@
 
                     <!-- Expiry & CSC -->
                     <div class="d-flex justify-content-between" style="gap: 1em;">
-                        
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" name="expiry-date" placeholder="Expires" required>
-                                <label class="form-label">Expires</label>
-                            </div>
-                        
-                        
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" name="csc-no" placeholder="CSC" required>
-                                <label class="form-label">CSC</label>
-                            </div>
-                        
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="expiry-date" placeholder="Expires" required>
+                            <label class="form-label">Expires</label>
+                        </div>
+
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="csc-no" placeholder="CSC" required>
+                            <label class="form-label">CSC</label>
+                        </div>
+
                     </div>
 
                     <!-- Country Dropdown -->
                     <div class="mb-3 d-flex justify-content-between">
                         <label class="form-label d-flex items-center">Billing address</label>
                         <div class="dropdown ms-3">
-                            <button class="btn btn-outline-none d-flex align-items-center justify-content-between w-10" type="button" id="dropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn btn-outline-none d-flex align-items-center justify-content-between w-10"
+                                type="button" id="dropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" class="flag-img me-2">
                                 <i class="fa-solid fa-angle-down"></i>
                             </button>
                             <ul class="dropdown-menu w-100" id="dropdownMenu" aria-labelledby="dropdownButton">
-                                <li onclick="selectCountry('us')"><img src="https://flagcdn.com/w40/us.png" class="flag-img  m-1 "> United States</li>
-                                <li onclick="selectCountry('gb')"><img src="https://flagcdn.com/w40/gb.png" class="flag-img m-1"> United Kingdom</li>
-                                <li onclick="selectCountry('in')"><img src="https://flagcdn.com/w40/in.png" class="flag-img m-1"> India</li>
-                                <li onclick="selectCountry('ke')"><img src="https://flagcdn.com/w40/ke.png" class="flag-img m-1"> Kenya</li>
-                                <li onclick="selectCountry('jp')"><img src="https://flagcdn.com/w40/jp.png" class="flag-img m-1"> Japan</li>
-                                <li onclick="selectCountry('br')"><img src="https://flagcdn.com/w40/br.png" class="flag-img m-1"> Brazil</li>
+                                <li onclick="selectCountry('us')"><img src="https://flagcdn.com/w40/us.png"
+                                        class="flag-img  m-1 "> United States</li>
+                                <li onclick="selectCountry('gb')"><img src="https://flagcdn.com/w40/gb.png"
+                                        class="flag-img m-1"> United Kingdom</li>
+                                <li onclick="selectCountry('in')"><img src="https://flagcdn.com/w40/in.png"
+                                        class="flag-img m-1"> India</li>
+                                <li onclick="selectCountry('ke')"><img src="https://flagcdn.com/w40/ke.png"
+                                        class="flag-img m-1"> Kenya</li>
+                                <li onclick="selectCountry('jp')"><img src="https://flagcdn.com/w40/jp.png"
+                                        class="flag-img m-1"> Japan</li>
+                                <li onclick="selectCountry('br')"><img src="https://flagcdn.com/w40/br.png"
+                                        class="flag-img m-1"> Brazil</li>
                             </ul>
                         </div>
                     </div>
@@ -117,7 +114,8 @@
 
                     <!-- Address Fields -->
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" name="str-address" placeholder="Street address" required>
+                        <input type="text" class="form-control" name="str-address" placeholder="Street address"
+                            required>
                         <label class="form-label">Street address</label>
                     </div>
                     <div class="form-floating mb-3">
