--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -10,8 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <style>
-        body {
+        html, body {
+            margin: 0;
+            padding: 0;
             background-color: fff;
+            height: auto;
         }
 
 
@@ -38,7 +41,7 @@
 </head>
 
 <body>
-    <div class="container my-5">
+    <div class="container">
         <h2 class="text-center text-secondary mb-4">Pay with Card</h2>
 
         <!-- Card Form -->
