--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -63,26 +63,26 @@
                 <div class="form-floating mb-3">
                     <input type="email" style="font-weight: 500;" class="form-control" id="floatingInput"
                         name="card-number" placeholder="Card number" required>
-                    <label for="floatingInput" style="font-weight: 500;">Card number</label>
+                    <label for="floatingInput" style="font-weight: 400;">Card number</label>
                 </div>
                 <div class="d-flex" style="gap: 4%;">
                     <div class="form-floating " style="width: 48%;">
                         <input type="password" style="font-weight: 500;" class="form-control" id="floatingPassword"
                             name="password" placeholder="Password" required>
-                        <label for="floatingPassword" style="font-weight: 500;">Expiry date</label>
+                        <label for="floatingPassword" style="font-weight: 400;">Expiry date</label>
                     </div>
                     <div class="form-floating " style="width: 48%;">
                         <input type="password" style="font-weight: 500;" class="form-control" id="floatingPassword"
                             name="password" placeholder="Password" required>
-                        <label for="floatingPassword" style="font-weight: 500;">CSC</label>
+                        <label for="floatingPassword" style="font-weight: 400;">CSC</label>
                     </div>
                 </div>
 
                 <!-- Country Dropdown -->
                 <div class="mt-4 mb-3 d-flex justify-content-between">
-                    <label class="form-label d-flex items-center mx-2">Billing address</label>
+                    <label class="form-label d-flex items-center mx-2 font-semibold">Billing address</label>
                     <div class="dropdown ml-auto">
-                        <button class="btn btn-outline-none d-flex align-items-center justify-content-between w-20"
+                        <button style="border: none;" class="btn btn-outline-none d-flex align-items-center justify-content-between w-20"
                             type="button" id="dropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" class="flag-img me-2">
                             <i class="fa-solid fa-angle-down"></i>
@@ -107,48 +107,48 @@
                     <div class="form-floating " style="width: 48%;">
                         <input type="text" style="font-weight: 500;" class="form-control" id="floatingPassword"
                             name="fname" placeholder="Password" required>
-                        <label for="floatingPassword" style="font-weight: 500;">First name</label>
+                        <label for="floatingPassword" style="font-weight: 400;">First name</label>
                     </div>
                     <div class="form-floating " style="width: 48%;">
                         <input type="text" style="font-weight: 500;" class="form-control" id="floatingPassword"
                             name="lname" placeholder="Last name" required>
-                        <label for="floatingPassword" style="font-weight: 500;">Last name</label>
+                        <label for="floatingPassword" style="font-weight: 400;">Last name</label>
                     </div>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput"
                         name="str-address" placeholder="Street address" required>
-                    <label for="floatingInput" style="font-weight: 500;">Street address</label>
+                    <label for="floatingInput" style="font-weight: 400;">Street address</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput" name="apt-bldg"
                         placeholder="Apt, Ste, Bldg" required>
-                    <label for="floatingInput" style="font-weight: 500;">Apt, Ste, Bldg</label>
+                    <label for="floatingInput" style="font-weight: 400;">Apt, Ste, Bldg</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput" name="city"
                         placeholder="City" required>
-                    <label for="floatingInput" style="font-weight: 500;">City</label>
+                    <label for="floatingInput" style="font-weight: 400;">City</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput" name="state"
                         placeholder="State/Province/Region" required>
-                    <label for="floatingInput" style="font-weight: 500;">State</label>
+                    <label for="floatingInput" style="font-weight: 400;">State</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput" name="zip-code"
                         placeholder="Zip" required>
-                    <label for="floatingInput" style="font-weight: 500;">Zip code</label>
+                    <label for="floatingInput" style="font-weight: 400;">Zip code</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" style="font-weight: 500;" class="form-control" id="floatingInput"
                         name="mobile-no" placeholder="Mobile" required>
-                    <label for="floatingInput" style="font-weight: 500;">Mobile</label>
+                    <label for="floatingInput" style="font-weight: 400;">Mobile</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="email" style="font-weight: 500;" class="form-control" id="floatingInput" name="email"
                         placeholder="Email" required>
-                    <label for="floatingInput" style="font-weight: 500;">Email</label>
+                    <label for="floatingInput" style="font-weight: 400;">Email</label>
                 </div>
 
                 <!-- Checkbox -->
@@ -160,7 +160,7 @@
                 <p class="text-muted small mb-3">By continuing, you confirm you're 18 years or older.</p>
                 <!-- Submit Button -->
                 <div class="d-grid">
-                    <button type="submit" class="btn btn-primary" style="border-radius: 20px;">Continue to Pay</button>
+                    <button type="submit" class="btn btn-primary" style="border-radius: 20px; font-weight: 300;">Continue to Pay</button>
                 </div>
 
 
