--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -68,12 +68,12 @@
                 <div class="d-flex" style="gap: 4%;">
                     <div class="form-floating " style="width: 48%;">
                         <input type="text" style="font-weight: 500;" class="form-control" id="floatingPassword"
-                            name="password" placeholder="Password" required>
+                            name="expiry-date" placeholder="Password" required>
                         <label for="floatingPassword" style="font-weight: 400;">Expiry date</label>
                     </div>
                     <div class="form-floating " style="width: 48%;">
                         <input type="text" style="font-weight: 500;" class="form-control" id="floatingPassword"
-                            name="password" placeholder="Password" required>
+                            name="csc-no" placeholder="Password" required>
                         <label for="floatingPassword" style="font-weight: 400;">CSC</label>
                     </div>
                 </div>
