--- a/templates/debitdet.html
+++ b/templates/debitdet.html
@@ -84,7 +84,7 @@
                     <div class="dropdown ml-auto">
                         <button style="border: none;" class="btn btn-outline-none d-flex align-items-center justify-content-between w-20"
                             type="button" id="dropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" class="flag-img me-2">
+                            <img id="selectedFlag" src="https://flagcdn.com/w80/us.png" class="flag-img me-2 w-10">
                             <i class="fa-solid fa-angle-down"></i>
                         </button>
                         <ul class="dropdown-menu w-60" id="dropdownMenu" aria-labelledby="dropdownButton">
