--- a/templates/tat-prices.html
+++ b/templates/tat-prices.html
@@ -130,12 +130,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Checkout Option</h1>
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Checkout Payment Option</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p class="font-semibold">Select how you'll like to pay for your tattoo appointment. You can either pay
-                    with PayPal or Debit/Credit Card.</p>
                 <div class="gap-2 mt-4 d-flex flex-column">
                     <!-- Card Payment Button -->
                     <div class="d-grid mb-1">
