--- a/static/css/home.css
+++ b/static/css/home.css
@@ -436,7 +436,7 @@ h4,.h4 {
         min-width:100vw;
         left:0;
         top:0;
-        background:rgba(0,0,0,.35)
+        background:transparent;
     }
 }
 @media(min-width: 1200px) {
