added small modification

--- a/templates/tat-prices.html
+++ b/templates/tat-prices.html
@@ -117,6 +117,20 @@
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
+            <h6>Donations</h6>
+            <p>@ $10.00</p>
+        </div>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
+    </div>
+    <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
+        <div class="fl">
+            <h6>Consultation</h6>
+            <p>@ $20.00</p>
+        </div>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
+    </div>
+    <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
+        <div class="fl">
             <h6>Aftercare</h6>
             <p>30mins @ $30.00</p>
         </div>
