--- a/templates/tat-prices.html
+++ b/templates/tat-prices.html
@@ -117,7 +117,7 @@
     </div>
     <div class="price-container rounded shadow p-4 mb-4 d-flex justify-content-between align-items-center">
         <div class="fl">
-            <h6>Donations</h6>
+            <h6>Donation</h6>
             <p>@ $5.00</p>
         </div>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Book</button>
