--- a/templates/suspended.html
+++ b/templates/suspended.html
@@ -11,7 +11,7 @@
 
 <body>
     <p class="text-md p-2">This application has been suspended by Render, check environment details in your Render
-        account to know the time it will be up again!!.</p>
+        account to know the time it will be up again!!</p>
 </body>
 
 </html>
