--- a/templates/suspended.html
+++ b/templates/suspended.html
@@ -12,6 +12,7 @@
 <body>
     <p class="text-md p-2">This application has been suspended by Render, check environment details in your Render
         account to know the time it will be up again!!</p>
+    <p>Wanna talk to the developer, <a href="https://wa.me/254797210158">lets go</a></p>
 </body>
 
 </html>
