--- a/templates/suspended.html
+++ b/templates/suspended.html
@@ -13,7 +13,7 @@
     <div class="text-md p-2">
         <p>This application has been suspended by Render, check environment details in your Render
             account to know the time it will be up again!!</p>
-        <p>Wanna talk to the developer, <a href="https://wa.me/254797210158" class="text-blue-700">lets go</a></p>
+        <p>Wanna talk to the developer, <a href="..." class="text-blue-700">lets go</a></p>
     </div>
 
 </body>
