--- a/templates/suspended.html
+++ b/templates/suspended.html
@@ -11,8 +11,7 @@
 
 <body>
     <div class="text-md p-2">
-        <p>This application has been suspended by Render, check environment details in your Render
-            account to know the time it will be up again!!</p>
+        <p>This application has been suspended by Render!!</p>
         <p>Wanna talk to the developer, <a href="..." class="text-blue-700">lets go</a></p>
     </div>
 
