--- a/templates/suspended.html
+++ b/templates/suspended.html
@@ -12,7 +12,7 @@
 <body>
     <div class="text-md p-2">
         <p>This application has been suspended by Render!!</p>
-        <p>Wanna talk to the developer, <a href="..." class="text-blue-700">lets go</a></p>
+        <p>Check the documentation in our website, <a href="..." class="text-blue-700">lets go</a></p>
     </div>
 
 </body>
